--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,18 +1,35 @@
-<div class="hbox main">
-    <span>Soft skills</span>
-    <span>Hard skills</span>
-</div>
-<div class="containt">
-    <div class="containt-side">
-        <ul>
-            <li>{{trad.getTrad('agile')}}</li>
-            <li>{{trad.getTrad('communication')}}</li>
-        </ul>
+<div class="main">
+    <div class="leftSide">
+        <div class="side">
+            <ul>
+                <li>{{trad.getTrad('angular')}}</li>
+                <li>Très bonne maitrise de RxJs et des stores Ngrx</li>
+                <li>{{trad.getTrad('php')}}</li>
+            </ul>
+        </div>
+        <div class="side greyColor">
+            <span>Soft skills</span>
+        </div>
+        <div class="side">
+            <ul>
+                <li>{{trad.getTrad('french')}}</li>
+                <li>{{trad.getTrad('english')}}</li>
+                <li>{{trad.getTrad('german')}}</li>
+            </ul>
+        </div>
     </div>
-    <div class="containt-side">
-        <ul>
-            <li>{{trad.getTrad('angular')}}</li>
-            <li>{{trad.getTrad('php')}}</li>
-        </ul>
+    <div class="rightSide">
+        <div class="side">
+            <span>Hard skills</span>
+        </div>
+        <div class="side greyColor">
+            <ul>
+                <li>{{trad.getTrad('agile')}}</li>
+                <li>{{trad.getTrad('communication')}}</li>
+            </ul>
+        </div>
+        <div class="side">
+            <span>{{trad.getTrad('languages')}}</span>
+        </div>
     </div>
 </div>
