add english resume

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,13 +7,13 @@
             <h2>{{trad.getTrad('imCedric')}}</h2>
             <h3 style="margin-bottom: 40px;">{{trad.getTrad('imDev')}}</h3>
             
-            <a class="noDefaultBehaviour DL-cv" download="Cedric_Gibelli.pdf" href="{{ 'assets/CV 2025 19.03.pdf' }}"> 
+            <a class="noDefaultBehaviour DL-cv" download="Cedric_Gibelli.pdf" href="{{getPicHref()}}"> 
                 <i class="fa fa-download dl-picto"></i>
                 {{trad.getTrad('dlCv')}}
             </a>
         </div>
     </div>
     <div >
-        <img class="profile-pic img-rectangle" src="assets/profile_pic.jpg"/>
+        <img class="profile-pic img-rectangle" src="assets/profile_pic.png"/>
     </div>
 </div>
