--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -7,11 +7,10 @@
 .title {
     color: white;
     height: 50px;
-    width: 210px;
     display: flex;
-    justify-content: center;
     align-items: center;
     font-size: 32px;
+    padding-left: 20px;
 }
 
 .button {
