--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -15,5 +15,8 @@
         <li><fa-icon class="icon-color" [icon]="faEnvelope"></fa-icon> {{'cedric.gibelli@gmail.com'}} </li>
         <li><fa-icon class="icon-color" [icon]="faPhone"></fa-icon> +33 6 19 65 02 59</li>
         <li><img class="linkedin-pic" src="assets/LinkedIn.png"/>  linkedin/in/cedric-gibelli</li>
+        <li><i class="fa fa-github"></i>  https://github.com/ajatak-01</li>
     </ul>
 </div>
+
+
